--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ nav ul li a {
 
 form {
     background-color: #fff;
-    max-width: 500px;
+    width: 100%;
     margin: 20px auto;
     padding: 20px;
     border-radius: 8px;
@@ -145,4 +145,15 @@ nav{
     justify-content: space-between;
     padding: 1rem;
     width: 100% !important;
+}
+
+.container{
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+.wrap{
+    display: flex;
+    flex-direction: column;
+    max-width: 100% !important;
 }
