--- a/styles.css
+++ b/styles.css
@@ -1,148 +1,159 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
-    background-color: #333;
-    color: white;
-    padding: 10px 0;
+  background-color: #333;
+  color: white;
+  padding: 10px 0;
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0;
-    text-align: center;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
 }
 
 nav ul li {
-    display: inline;
-    margin: 0 15px;
+  display: inline;
+  margin: 0 15px;
 }
 
-#contact-form{
-    transition: .3s ease;
-    padding: 1rem !important;
-
+#contact-form {
+  transition: 0.3s ease;
+  padding: 1rem !important;
 }
-#contact-form input{
-    width: 100%;
+#contact-form input {
+  width: 100%;
 }
 
 nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
 }
 
 form {
-    background-color: #fff;
-    max-width: 500px;
-    margin: 20px auto;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  max-width: 500px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 form label {
-    display: block;
-    margin-bottom: 4px;
-    font-weight: 500;
-    font-size: 1rem !important;
+  display: block;
+  margin-bottom: 4px;
+  font-weight: 500;
+  font-size: 1rem !important;
 }
 
 form input[type="text"],
 form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 form button {
-    background-color: #4eb898;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
+  background-color: #4eb898;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 form button:hover {
-    background-color: #379579;
+  background-color: #379579;
 }
 
 .image-gallery {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    gap: 1rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 1rem;
 }
 
 .image-gallery img {
-    margin: 0 10px;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    object-position: center;
-    transition: transform 0.3s ease;
-    overflow: hidden;
-    border-radius: 12px;
+  margin: 0 10px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.3s ease;
+  overflow: hidden;
+  border-radius: 12px;
 }
 
 .image-gallery img:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
-
-.movie-card{
-    overflow: hidden;
+.movie-card {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 12px;
+    z-index: 10;
+    border-radius: 0 !important;
+    margin: 0 !important;
+  }
+  .title {
     display: flex;
-    flex-direction: column;
-    img{
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        object-position: center;
-        border-radius: 12px;
-        z-index: 10;
-        border-radius: 0 !important;
-        margin: 0 !important;
-    }
-    .title{
-        display: flex;
-        width: 100%;
-        background-color: #b92525;
-        color: #ffffff;
-        letter-spacing: 2px;
-        font-size: 1rem;
-        z-index: 20 !important;
-        text-align: center !important;
-        justify-content: center;
-        padding: .35rem;
-    }
+    width: 100%;
+    background-color: #b92525;
+    color: #ffffff;
+    letter-spacing: 2px;
+    font-size: 1rem;
+    z-index: 20 !important;
+    text-align: center !important;
+    justify-content: center;
+    padding: 0.35rem;
+  }
 }
 
-.logo{
-    display: flex;
-    gap: .5rem;
-    align-items: center;
+.logo {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
 }
 
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    width: 100% !important;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  width: 100% !important;
+}
+
+.titulo {
+  font-size: 15px;
+  text-align: center;
+  padding: 5px;
+  font-weight: bold;
+  background: linear-gradient(45deg, #379579, #b92525);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  margin: 20px 0;
 }
