--- a/styles.css
+++ b/styles.css
@@ -97,10 +97,12 @@ form button:hover {
 }
 
 .image-gallery {
-  display: flex;
+  display: grid;
   justify-content: center;
+  grid-template-columns: repeat(3, 200px);
   margin-top: 20px;
   gap: 1rem;
+  
 }
 
 .image-gallery img {
@@ -189,4 +191,50 @@ nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+
+.hero{
+    background: url('https://images.pexels.com/photos/7991158/pexels-photo-7991158.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center/cover;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 575px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2; 
+}
+
+.hero-text{
+    width: 100%;
+    z-index: 10;
+    position: inherit !important;
+    display: grid;
+    place-items: center;
+}
+
+.hero .hero-titulo{
+    font-size: 3rem;
+    color: #ffffff !important;
+}
+
+.hero .subtitulo{
+    font-size: 2rem;
+    color: #ffffff !important;
 }
