--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ nav ul {
   list-style-type: none;
   padding: 0;
   text-align: center;
+  margin: 0 !important;
 }
 
 nav ul li {
@@ -174,7 +175,7 @@ nav {
 }
 
 .titulo {
-  font-size: 15px;
+  font-size: 2rem !important;
   text-align: center;
   padding: 5px;
   font-weight: bold;
@@ -211,9 +212,10 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 575px;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 500px;
+    background-color: rgba(0, 0, 0, 0.70);
     z-index: 1;
+    transform: translateY(59px);
 }
 
 .hero-content {
